# posthog-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/posthog_cli/: __init__.py  client.py  config.py  main.py  output.py
src/posthog_cli/commands/: activity.py  api.py  auth.py  dashboards.py  errors.py  experiments.py  feature_flags.py  insights.py  logs.py  organizations.py  projects.py  query.py  search.py  surveys.py
tests/: conftest.py  test_activity.py  test_client.py  test_commands.py  test_config.py  test_output.py
