[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posthog-cli"
version = "0.1.0"
description = "Community-built CLI for managing PostHog analytics — feature flags, experiments, surveys, dashboards, insights, and more. Not affiliated with PostHog Inc."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nelson Gallardo", email = "gnelson85@gmail.com" },
]
keywords = ["posthog", "analytics", "cli", "feature-flags", "experiments"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "keyring>=25,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
posthog = "posthog_cli.main:app"

[project.urls]
Homepage = "https://github.com/nelsongallardo/posthog-cli"
Repository = "https://github.com/nelsongallardo/posthog-cli"
Issues = "https://github.com/nelsongallardo/posthog-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/posthog_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
